# duckdb-jq

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  description.yml  extension_config.cmake
.cargo/: config.toml
.dev/llm-threads/claude/: 2026-05-17T08:24:44.346Z-c6695f3b-3c1a-49aa-98cf-8df0356e106e.jsonl  2026-05-17T09:00:25.583Z-e69582d8-010b-4e66-a6a4-6ef955351af6.jsonl  2026-05-17T09:49:57.670Z-f05c92d2-12db-4234-9b4b-aee6fde5b116.jsonl  2026-05-17T10:10:11.195Z-0d50b557-aa8b-46f2-97c2-ba4158ff4d2d.jsonl  2026-05-17T13:05:20.638Z-1db276fc-5955-4f9e-aa51-73607ef6137b.jsonl  2026-05-18T12-07-26.687Z-b29eda9c-bdce-4045-a912-c30f48be7f38.jsonl  2026-05-18T13-50-13.074Z-05f70b0b-ca53-465b-9163-b6991c51044a.jsonl  2026-05-18T16:28:39.593Z-6571ea21-bada-466d-bf5c-521649907b3c.jsonl  2026-05-19T04-50-46.341Z-ec6da032-ad2c-4e63-937b-c2c60f649839.jsonl  2026-05-19T05-29-32.090Z-8369065a-3116-420e-bb64-caa0375c3598.jsonl
.dev/llm-threads/claude/2026-05-17T09:00:25.583Z-e69582d8-010b-4e66-a6a4-6ef955351af6/subagents/: agent-ab7281b5f1d2fed8a.jsonl  agent-ab7281b5f1d2fed8a.meta.json
.dev/llm-threads/claude/2026-05-17T10-10-11.195Z-0d50b557-aa8b-46f2-97c2-ba4158ff4d2d/0d50b557-aa8b-46f2-97c2-ba4158ff4d2d/subagents/: agent-a0f4fac5ee32c5aa5.meta.json
.dev/llm-threads/claude/2026-05-17T10-10-11.195Z-0d50b557-aa8b-46f2-97c2-ba4158ff4d2d/tool-results/: toolu_01Fr4A7F1GVAANZFFtjNjgHs.txt  toolu_01KeDCHva9MrJ2Fth7BjcaRm.txt
.dev/llm-threads/claude/2026-05-17T10:10:11.195Z-0d50b557-aa8b-46f2-97c2-ba4158ff4d2d/0d50b557-aa8b-46f2-97c2-ba4158ff4d2d/subagents/: agent-a0f4fac5ee32c5aa5.jsonl  agent-a3979783890aa3203.jsonl
.dev/llm-threads/claude/2026-05-17T10:10:11.195Z-0d50b557-aa8b-46f2-97c2-ba4158ff4d2d/subagents/: agent-a3979783890aa3203.meta.json
.dev/llm-threads/claude/2026-05-19T04-50-46.341Z-ec6da032-ad2c-4e63-937b-c2c60f649839/tool-results/: bj04qzdxl.txt
.github/workflows/: MainDistributionPipeline.yml  _extension_distribution.yml  extension-ci.yml
src/: jq_extension.cpp  lib.rs  wasm_lib.rs
src/include/: jq_extension.hpp
test/: README.md
test/sql/: jq.test
